--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "flip-table",
-  "version": "1.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+	"name": "flip-table",
+	"version": "1.0.2",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
 	"bin": {
 		"flip-table": "./bin/flip-table"
 	},
-  "author": "Jonathan Boudreau <jonathan.boudreau.92@gmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "flip-text": "^1.1.0",
-    "to-clipboard": "^0.2.0"
-  }
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/AGhost-7/node-flip-table.git"
+	},
+	"author": "Jonathan Boudreau <jonathan.boudreau.92@gmail.com>",
+	"license": "ISC",
+	"dependencies": {
+		"flip-text": "^1.1.0",
+		"to-clipboard": "^0.2.0"
+	}
 }
