--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "license": "WTFPL",
   "dependencies": {
     "flip-text": "^1.1.0",
+    "knex": "^0.16.3",
+    "mysql2": "^1.6.4",
+    "pg": "^7.8.0",
     "to-clipboard": "^0.2.0"
   },
   "devDependencies": {
