--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,20 +1,9 @@
 env:
-  browser: true
-  commonjs: true
-  es6: true
   node: true
-  console: true
+  commonjs: true
+  es2021: true
+  mocha: true
 extends: 'eslint:recommended'
-rules:
-  indent:
-    - error
-    - tab
-  linebreak-style:
-    - error
-    - unix
-  quotes:
-    - error
-    - single
-  semi:
-    - error
-    - always
+parserOptions:
+  ecmaVersion: 12
+rules: {}
