--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
   "license": "WTFPL",
   "dependencies": {
     "flip-text": "^1.1.0",
-    "knex": "^0.16.3",
-    "mysql2": "^1.6.4",
-    "pg": "^7.8.0",
-    "to-clipboard": "^0.2.0"
+    "knex": "^0.21.14",
+    "mysql2": "^2.2.5",
+    "pg": "^8.5.1",
+    "to-clipboard": "^0.4.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "eslint": "^5.0.0",
-    "eslint-config-standard": "^11.0.0",
+    "chai": "^4.2.0",
+    "eslint": "^7.16.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "mocha": "^2.4.5",
-    "prettier": "^1.13.6"
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "mocha": "^8.2.1",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
   }
 }
